feat(platform): add hardware interface for TDP control and model configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
 zbus_macros = "3.14.1"
 rog_platform = { git = "https://gitlab.com/asus-linux/asusctl.git", default-features = true }
 xdg = "2.5.2"
+toml = "0.7.8"
+serde = { version = "1.0", features = ["derive"] }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 libryzenadj = { git = "https://gitlab.com/shadowapex/libryzenadj-rs.git" }
