feat(dmi_overrides): add new model Claw A1M with TDP configuration

--- a/rootfs/usr/share/powerstation/platform/dmi_overrides_apu_database.toml
+++ b/rootfs/usr/share/powerstation/platform/dmi_overrides_apu_database.toml
@@ -76,3 +76,9 @@ model_name = "G1618-04"
 min_tdp = 5.0
 max_tdp = 28.0
 max_boost = 0.0
+
+[[models]]
+model_name = "Claw A1M"
+min_tdp = 5.0
+max_tdp = 28.0
+max_boost = 5.0
